src/objects/UnitsTypeBean__mdt.object
<CustomObject>
    <fields>
        <fullName>ConfigTagId__c</fullName>
        <label>ConfigTagId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DisplayValue__c</fullName>
        <label>DisplayValue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsDefault__c</fullName>
        <label>IsDefault</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsInternal__c</fullName>
        <label>IsInternal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsRc__c</fullName>
        <label>IsRc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsUsage__c</fullName>
        <label>IsUsage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LanguageCode__c</fullName>
        <label>LanguageCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShortDisplay__c</fullName>
        <label>ShortDisplay</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnitsType__c</fullName>
        <label>UnitsType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>UnitsTypeBean</label>
    <pluralLabel>UnitsTypeBean</pluralLabel>
</CustomObject>